# cpp

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
apps/money_manager/: CMakeLists.txt  README.md
apps/money_manager/src/: CMakeLists.txt  accountwindow.cpp  accountwindow.h  accountwindow.ui  cardwindow.cpp  cardwindow.h  cardwindow.ui  categorywindow.cpp  categorywindow.h  categorywindow.ui  contactwindow.cpp  contactwindow.h  contactwindow.ui  currencywindow.cpp  currencywindow.h  currencywindow.ui  globalcontext.cpp  globalcontext.h  imagecache.cpp  imagecache.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  translation.cpp  translation.h
apps/money_manager/src/data/: CMakeLists.txt  datacache.cpp  datacache.h  moneyrecorditemmodel.h
apps/money_manager/src/database/: CMakeLists.txt  databaseconnection.cpp  databaseconnection.h  datasource.cpp  datasource.h  preparedstatement.cpp  preparedstatement.h  resultset.cpp  resultset.h  sqlexception.h  statement.cpp  statement.h
apps/money_manager/src/model/: CMakeLists.txt  account.cpp  account.h  card.cpp  card.h  cardtype.h  category.cpp  category.h  categorytype.h  contact.cpp  contact.h  contacttype.h  currency.cpp  currency.h  icon.cpp  icon.h  moneyrecord.cpp  moneyrecord.h  transaction.cpp  transaction.h  transactiondetail.cpp  transactiondetail.h  transactiontype.h
apps/money_manager/src/persistence/: CMakeLists.txt  accountrepository.cpp  accountrepository.h  cardrepository.cpp  cardrepository.h  categoryrepository.cpp  categoryrepository.h  contactrepository.cpp  contactrepository.h  currencyrepository.cpp  currencyrepository.h  iconrepository.cpp  iconrepository.h  moneydao.cpp  moneydao.h  repository.h  transactionrepository.cpp  transactionrepository.h
apps/money_manager/src/profiles/: CMakeLists.txt  connectdialog.cpp  connectdialog.h  connectdialog.ui  connectionprofile.cpp  connectionprofile.h  connectionprofiledialog.cpp  connectionprofiledialog.h  connectionprofiledialog.ui  connectionprofileitemmodel.cpp  connectionprofileitemmodel.h  connectionprofilemanager.cpp  connectionprofilemanager.h
apps/money_manager/src/settings/: CMakeLists.txt  settings.cpp  settings.h
apps/password_generator/: CMakeLists.txt  CMakePresets.json  README.md
apps/password_generator/i18n/: password_generator_ru_RU.ts
apps/password_generator/src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  password_generator.cpp  password_generator.cxx  password_generator_ru.ts  util.cxx
apps/password_generator/src/generator/: character_set.h  generator.cmake  generator.cpp  generator.h
apps/password_generator/src/ui/: mainwindow.h  password_generator_ru.ts
apps/password_manager/: CMakeLists.txt  CMakePresets.json  README.md
apps/password_manager/resources/xsd/: password-manager.xsd
apps/password_manager/src/: CMakeLists.txt  exceptions.h  exceptions.hpp  main.cpp  serializer.cpp  serializer.h  serializer.hpp  str.h  str.hpp
apps/password_manager/src/crypto/: CMakeLists.txt  aes256.cpp  aes256.h  crypto.cmake  cryptoexception.h
apps/password_manager/src/import/: CMakeLists.txt  importaction.h  importaction.hpp  importdialog.cpp  importdialog.h  importdialog.hpp  importdialog.ui  importrecord.cpp  importrecord.h  importrecord.hpp  importrecordtablemodel.cpp  importrecordtablemodel.h  importrecordtablemodel.hpp  importutil.cpp  importutil.h
apps/password_manager/src/model/: CMakeLists.txt  card.cpp  card.h  card.hpp  cardclass.cpp  cardclass.h  cardclass.hpp  creditcardtype.cpp  creditcardtype.h  creditcardtype.hpp  enumclass.h  enums.cpp  field.cpp  field.h  field.hpp  fieldtype.cpp  fieldtype.h  fieldtype.hpp  model.cmake  picture.cpp  picture.h  picture.hpp  recordtype.h  recordtype.hpp
apps/password_manager/src/serializer/: serializer.cpp  serializer.hpp  xsd_schema.c  xsd_schema.h
apps/password_manager/src/settings/: CMakeLists.txt  fonttype.h  passwordtype.h  settings.cpp  settings.h  settings.hpp  settingsdialog.cpp  settingsdialog.h  settingsdialog.hpp  settingsdialog.ui
apps/password_manager/src/ui/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  cardeditdialog.cpp  cardeditdialog.h  cardeditdialog.hpp  cardeditdialog.ui  cardtableitemmodel.cpp  cardtableitemmodel.h  cardtableitemmodel.hpp  cardtablesortfiltermodel.cpp  cardtablesortfiltermodel.h  cardtablesortfiltermodel.hpp  changepassworddialog.cpp  changepassworddialog.h  changepassworddialog.ui  editfieldlistmodel.cpp  editfieldlistmodel.h  editfieldlistmodel.hpp  mainwindow.cpp  (+30 more)
apps/password_manager/test/: CMakeLists.txt  field_test.cpp  serializer_test.cpp  ui_tools_test.cpp
apps/sapper/: CMakeLists.txt  README.md
apps/sapper/src/: CMakeLists.txt  boardsizedialog.cpp  boardsizedialog.h  boardsizedialog.ui  buttoneventfilter.cpp  buttoneventfilter.h  gametimer.cpp  gametimer.cxx  gametimer.h  gametimer.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  picture.cpp  picture.h  pictures.cpp  pictures.h  pictures.hpp  resources.c  resources.h  sapper.cpp  sapper.cxx  sapper_ru_RU.ts
apps/sapper/test/: CMakeLists.txt  board_test.cpp  cell_test.cpp
libs/common/: CMakeLists.txt  README.md
libs/common/src/: CMakeLists.txt  arithmeticexception.h  arithmeticexception.hpp  decimal.cpp  decimal.h  decimal.hpp  enumclass.h  localdate.cpp  localdate.cxx  localdate.hpp  numeric.hpp  observablevalue.hpp  uuid.hpp
libs/common/test/: CMakeLists.txt  decimaltest.cpp  localdate_test.cpp  numeric_test.cpp  uuid_test.cpp
libs/cryptography/: CMakeLists.txt
libs/cryptography/src/: aes256.cpp  crypto.cxx  crypto.hpp
libs/cryptography/test/: aes256_test.cpp
libs/pwdgen/: CMakeLists.txt
libs/pwdgen/src/: CMakeLists.txt  characterset.cpp  characterset.h  characterset.hpp  generator.cpp  generator.h  generator.hpp
libs/pwdgen/test/: CMakeLists.txt  characterset_test.cpp  pwdgentest.cpp
libs/qthelpers/: CMakeLists.txt
libs/qthelpers/src/: CMakeLists.txt  qthelpers.cpp  qthelpers.h  qthelpers.hpp
libs/qthelpers/test/: qthelpers_test.cpp
(+96 files in other folders)
